--- a/public/frontendTemplate/style.css
+++ b/public/frontendTemplate/style.css
@@ -79,13 +79,10 @@ footer{
 	appearance: none;
 }
 
-.container {
-	perspective: 1000px;
-	margin-bottom: 3px;
-}
+
 
 .seat {
-	background-color: #444451;
+	background-color: green;
 	height: 12px;
 	width: 20px;
 	margin: 3px;
@@ -106,13 +103,13 @@ footer{
 	margin: 10px 0;
 }
 
-.seat.selected {
+/*.seat.selected {
 	background-color: var(--selected-color);
 }
 
 .seat.occupied {
 	background-color: var(--available-color);
-}
+}*/
 
 /* Selects the second row f*/
 .seat:nth-of-type(6) {
@@ -161,7 +158,7 @@ footer{
 	margin-left: 2px;
 }
 
-.row {
+.movie .row {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -182,4 +179,24 @@ p.text {
 
 p.text span {
 	color: #6feaf6;
+}
+
+.available {
+    background-color: green;
+}
+.couple .available{
+	background-color: green;
+}
+
+.hovering{
+  background-color: #ae59b3;
+}
+.selected{
+    background-color: red;
+}
+.couple .hovering{
+  background-color: #ae59b3;
+}
+.couple .selected{
+    background-color: red;
 }
